
RelStorage 1.1b2

- Made the MySQL locks database-specific rather than server-wide.  This is
  important for multi-database configurations.

- In the PostgreSQL adapter, made the pack lock fall back to table locking
  rather than advisory locks for PostgreSQL 8.1.


RelStorage 1.1b1

- Fixed the use of setup.py without setuptools.  Thanks to Chris Withers.

- Fixed type coercion of the transaction extension field.  This fixes
  an issue with converting databases.  Thanks to Kevin Smith for
  discovering this.

- Added logging to the pack code to help diagnose performance issues.

- Additions to the object_ref table are now periodically committed
  during pre_pack so that the work is not lost if pre_pack fails.

- Modified the pack code to pack one transaction at a time and
  release the commit lock frequently.  This should help large pack
  operations.

- Fixed buildout-based installation of the zodbconvert script.  Thanks to
  Jim Fulton.


RelStorage 1.0.1

- The speedtest script failed if run on a test database that has no tables.
  Now the script creates the tables if needed.  Thanks to Flavio Coelho
  for discovering this.

- Reworked the auto-reconnect logic so that applications never see
  temporary database disconnects if possible.  Thanks to Rigel Di Scala
  for pointing out this issue.

- Improved the log messages explaining database connection failures.

- Moved poll_invalidations to the common adapter base class, reducing the
  amount of code to maintain.


RelStorage 1.0

- Added a utility for converting between storages called zodbconvert.


RelStorage 1.0c1

- The previous fix for non-ASCII characters was incorrect.  Now transaction
  metadata is stored as raw bytes.  A schema migration is required; see
  notes/migrate-1.0-beta.txt.

- Integrated setuptools and made an egg.


RelStorage 1.0 beta

- Renamed to reflect expanding database support.

- Added support for Oracle 10g.

- Major overhaul with many scalability and reliability improvements,